--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,5 +1,6 @@
 backend:
-  name: git-gateway
+  name: github
+  repo: tommasoltrz/nextjs-netlify-blog-template
   branch: master
 media_folder: public/images
 public_folder: /images
