--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,6 +1,5 @@
 backend:
-  name: github
-  repo: tommasoltrz/nextjs-netlify-blog-template
+  name: git-gateway
   branch: master
 media_folder: public/images
 public_folder: /images
@@ -92,58 +91,6 @@ collections:
   - name: "posts"
     label: "Posts"
     folder: "src/pages/posts"
-    extension: "mdx"
-    format: "frontmatter"
-    create: true
-    slug: "{{slug}}"
-    identifier_field: slug
-    summary: "{{title}}"
-    fields:
-      - label: "Slug"
-        name: "slug"
-        widget: "string"
-      - label: "Title"
-        name: "title"
-        widget: "string"
-      - label: "Publish Date"
-        name: "date"
-        widget: "datetime"
-        format: "YYYY-MM-DD"
-        dateFormat: "YYYY-MM-DD"
-        timeFormat: false
-      - label: Author
-        name: "author"
-        widget: relation
-        collection: "meta"
-        file: "authors"
-        searchFields:
-          - "authors.*.name"
-        displayFields:
-          - "authors.*.name"
-        valueField: "authors.*.slug"
-      - label: Tags
-        label_singular: "Tag"
-        name: "tags"
-        widget: list
-        summary: "{{fields.tag}}"
-        field:
-          label: Tag
-          name: tag
-          widget: relation
-          collection: "meta"
-          file: "tags"
-          searchFields:
-            - "tags.*.name"
-          displayFields:
-            - "tags.*.name"
-          valueField: "tags.*.slug"
-      - label: "Body"
-        name: "body"
-        widget: "markdown"
-
-  - name: "homepage"
-    label: "Homepage"
-    folder: "src/pages"
     extension: "mdx"
     format: "frontmatter"
     create: true
