--- a/config.json
+++ b/config.json
@@ -1,19 +1,13 @@
 {
-  "base_url": "https://wutali-nextjs-netlify-blog.netlify.app",
-  "site_title": "Next.js Netlify Blog",
-  "site_description": "Next.js blog template for Netlify",
+  "base_url": "https://zealous-kepler-f65695.netlify.app",
+  "site_title": "Vitesse",
+  "site_description": "Acciughe al verde",
   "site_keywords": [
-    {
-      "keyword": "Next.js"
-    },
-    {
-      "keyword": "Netlify"
-    },
-    {
-      "keyword": "React"
-    }
+    "Machine Learning",
+    "Neural Networks",
+    "Vitesse"
   ],
   "posts_per_page": 5,
   "twitter_account": "@my-account",
-  "github_account": "wutali"
+  "github_account": "tommasoltrz"
 }
