fix wrong typingi

--- a/config.json
+++ b/config.json
@@ -2,12 +2,7 @@
   "base_url": "https://zealous-kepler-f65695.netlify.app",
   "site_title": "Vitesse",
   "site_description": "Acciughe al verde",
-  "site_keywords": [
-    "Machine Learning",
-    "Neural Networks",
-    "Vitesse"
-  ],
+  "site_keywords": ["Machine Learning", "Neural Networks", "Vitesse"],
   "posts_per_page": 5,
-  "twitter_account": "@my-account",
   "github_account": "tommasoltrz"
 }
