--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -5,6 +5,20 @@ media_folder: public/images
 public_folder: /images
 publish_mode: editorial_workflow
 
+i18n:
+  # Required and can be one of multiple_folders, multiple_files or single_file
+  # multiple_folders - persists files in `<folder>/<locale>/<slug>.<extension>`
+  # multiple_files - persists files in `<folder>/<slug>.<locale>.<extension>`
+  # single_file - persists a single file in `<folder>/<slug>.<extension>`
+  structure: multiple_folders
+
+  # Required - a list of locales to show in the editor UI
+  locales: [en, it, fr]
+
+  # Optional, defaults to the first item in locales.
+  # The locale to be used for fields validation and as a baseline for the entry.
+  default_locale: en
+
 collections:
   - name: "config"
     label: "Config"
@@ -143,13 +157,7 @@ collections:
       - label: "About Page"
         name: "about"
         file: "site/content/about.yml"
+        i18n: true
         fields:
-          - { label: Title, name: title, widget: string }
-          - { label: Intro, name: intro, widget: markdown }
-          - label: Team
-            name: team
-            widget: list
-            fields:
-              - { label: Name, name: name, widget: string }
-              - { label: Position, name: position, widget: string }
-              - { label: Photo, name: photo, widget: image }
+          - { label: Title, name: title, widget: string, i18n: true }
+          - { label: Intro, name: intro, widget: markdown, i18n: true }
