--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -10,7 +10,7 @@ i18n:
   # multiple_folders - persists files in `<folder>/<locale>/<slug>.<extension>`
   # multiple_files - persists files in `<folder>/<slug>.<locale>.<extension>`
   # single_file - persists a single file in `<folder>/<slug>.<extension>`
-  structure: multiple_folders
+  structure: single_file
 
   # Required - a list of locales to show in the editor UI
   locales: [en, it, fr]
