--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -153,6 +153,8 @@ collections:
 
   - label: "Pages"
     name: "pages"
+    i18n:
+      structure: single_file
     files:
       - label: "About Page"
         name: "about"
