Update Pages “about”

--- a/site/content/about.yml
+++ b/site/content/about.yml
@@ -1,3 +1,9 @@
-title: I am a page
-intro: I am an intro
-team: []
+en:
+  title: I am the title
+  intro: I am the intro
+it:
+  title: Io sono il titolo
+  intro: Io sono l intro
+fr:
+  title: Baguettes
+  intro: Baguettes
