--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -118,7 +118,7 @@ collections:
           - { label: Title, name: title, widget: string, i18n: true }
           - { label: Intro, name: intro, widget: markdown, i18n: true }
       - label: "HomePage"
-        name: "about"
+        name: "homepage"
         file: "src/pages/files/homepage.yml"
         i18n: true
         fields:
