--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -35,9 +35,8 @@ collections:
             name: "mision"
             widget: "relation"
             collection: "mission"
-            search_fields: ["name.first", "twitterHandle"]
-            value_field: "name.first"
-            display_fields: ["twitterHandle", "followerCount"]
+            searchFields: mision
+            valueField: mision
       - label: "About Page"
         name: "about"
         file: "src/pages/files/about.yml"
