--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -35,8 +35,10 @@ collections:
             name: "mision"
             widget: "relation"
             collection: "mission"
-            searchFields: ["name"]
-            valueField: name
+            file: mission
+            searchFields: ["mission.*.title"]
+            display_fields: ["mission.*.title"]
+            valueField: "mission.*.title"
       - label: "About Page"
         name: "about"
         file: "src/pages/files/about.yml"
