Update Pages “homepage”

--- a/src/pages/files/homepage.yml
+++ b/src/pages/files/homepage.yml
@@ -3,5 +3,6 @@ en:
   mision: This is our mission
 it:
   hero_title: I am the hero title in italian
+  mision: This is our mission
 fr:
   hero_title: I am the hero title in french
