--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "export": "next build && next export -o ./dist",
-    "test": "jest"
+    "test": "jest",
+    "postbuild": "next-on-netlify"
   },
   "dependencies": {
     "@mapbox/rehype-prism": "^0.5.0",
@@ -18,6 +19,7 @@
     "js-yaml": "^3.14.0",
     "next": "^10.0.7",
     "next-mdx-enhanced": "^3.1.0",
+    "next-on-netlify": "^2.8.7",
     "normalize.css": "^8.0.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
