--- a/src/pages/files/homepage.yml
+++ b/src/pages/files/homepage.yml
@@ -1,6 +1,8 @@
 en:
   hero_title: I am the hero title
   mision: This is our mission
+  mission: This is our mission
+  value: This is our value
 it:
   hero_title: I am the hero title in italian
   mision: This is our mission
