Update Pages “homepage”

--- a/src/pages/files/homepage.yml
+++ b/src/pages/files/homepage.yml
@@ -6,5 +6,7 @@ en:
 it:
   hero_title: I am the hero title in italian
   mision: This is our mission
+  mission: This is our mission
+  value: This is our value
 fr:
   hero_title: I am the hero title in french
