--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-instagram-embed": "^1.5.0",
+    "react-markdown": "^5.0.3",
     "react-schemaorg": "^1.2.0",
     "react-twitter-embed": "^3.0.3",
     "react-youtube": "^7.11.3",
