--- a/src/pages/files/hero.yml
+++ b/src/pages/files/hero.yml
@@ -7,6 +7,6 @@ it:
   subtitle: For whatever reason.
   image: /images/photo-1554034483-04fda0d3507b.jpeg
 fr:
-  title: Big Data Algorithms for Sea and Pesci.
+  title: Big Data Algorithms for Sea and Baguettes.
   subtitle: For whatever reason.
   image: /images/photo-1554034483-04fda0d3507b.jpeg
