--- a/src/pages/files/hero.yml
+++ b/src/pages/files/hero.yml
@@ -1,12 +1,12 @@
 en:
-  image: /images/photo-1554034483-04fda0d3507b.jpeg
+  image: /images/hero-desktop.svg
   title: Big Data Algorithms for Sea and Fisheries.
-  subtitle: For whatever reason.
+  subtitle: Using Big Data for forecasts  and vessel tracking
 it:
   title: Big Data Algorithms for Sea and Pesci.
-  subtitle: For whatever reason.
-  image: /images/photo-1554034483-04fda0d3507b.jpeg
+  subtitle: Using Big Data for forecasts  and vessel tracking
+  image: /images/hero-desktop.svg
 fr:
   title: Big Data Algorithms for Sea and Baguettes.
-  subtitle: For whatever reason.
-  image: /images/photo-1554034483-04fda0d3507b.jpeg
+  subtitle: Using Big Data for forecasts  and vessel tracking
+  image: /images/hero-desktop.svg
