--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -84,16 +84,16 @@ collections:
             name: body
             widget: markdown
             i18n: true
-          - label: Navigation Items
-            label_singular: "nagigation"
-            name: "tags"
-            i18n: true
+          - label: Navigation
+            name: nagigation
+            required: true
             widget: list
+            hint: "Elements in the header"
+            allow_add: true
             field:
-              label: Tag
-              name: tag
+              label: item
+              name: item
               widget: string
-
       - name: "value"
         label: "Value"
         file: "src/pages/files/value.yml"
