--- a/src/pages/files/hero.yml
+++ b/src/pages/files/hero.yml
@@ -2,8 +2,7 @@ en:
   image: /images/hero-desktop.svg
   title: Big Data Algorithms for Sea and Fisheries
   subtitle: Using Big Data for forecasts  and vessel tracking
-  navigation:
-    - l;mklmlk;m;ll
+  navigation: []
 it:
   title: Big Data Algorithms for Sea and Pesci
   subtitle: Using Big Data for forecasts  and vessel tracking
