--- a/src/pages/files/hero.yml
+++ b/src/pages/files/hero.yml
@@ -2,11 +2,29 @@ en:
   image: /images/hero-desktop.svg
   title: Big Data Algorithms for Sea and Fisheries
   subtitle: Using Big Data for forecasts  and vessel tracking
+  navigation_tags:
+    - What
+    - Why
+    - Case studies
+    - About us
+    - Contact
 it:
   title: Big Data Algorithms for Sea and Pesci
   subtitle: Using Big Data for forecasts  and vessel tracking
   image: /images/hero-desktop.svg
+  navigation_tags:
+    - Cosa facciamo
+    - Perchè
+    - Casi studio
+    - Chi siamo
+    - Contatti
 fr:
   title: Big Data Algorithms for Sea and Baguettes
   subtitle: Using Big Data for forecasts  and vessel tracking
   image: /images/hero-desktop.svg
+  navigation_tags:
+    - What
+    - Why
+    - Case studies
+    - About us
+    - Contact
